[gd_scene load_steps=3 format=3 uid="uid://ctfjdikh3g343"]

[ext_resource type="Script" uid="uid://cpk2qj0r71r4w" path="res://dialog_manager.gd" id="1_swmoi"]
[ext_resource type="Theme" uid="uid://dcjmac6ihfnj4" path="res://Themes/theme_text0.tres" id="2_lohcx"]

[node name="DialogManager" type="Node2D"]
z_index = 100
script = ExtResource("1_swmoi")

[node name="Portait" type="Sprite2D" parent="."]
position = Vector2(52, 34)

[node name="Text" type="Label" parent="."]
offset_left = 28.0
offset_right = 320.0
offset_bottom = 24.0
theme = ExtResource("2_lohcx")
text = "* Placeholder."
text_overrun_behavior = 2

[node name="TextSound" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
